<resources>
    <string name="app_name">AirGuard</string>
    <string name="title_ignored_devices">Ignored</string>
    <string name="title_dashboard">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_debug">Debug</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_devices_tracking">Device ID: {deviceAddress}</string>
    <string name="title_scan">Scan</string>
    <string name="title_scan_detail">Locate: {deviceAddress}</string>
    <string name="title_observe_tracker">Observe tracker: {deviceAddress}</string>
    <string name="title_export_device">Export device data: {deviceAddress}</string>
    <string name="title_devices_map_device">Map: %1$s</string>
    <string name="title_devices">Devices</string>
    <string name="title_data_deletion">Data deletion request</string>
    <string name="title_article">Article</string>
    <string name="map_empty_text">No devices have been found yet. Every time a device is discovered, a location on the map will be shown where this occurred. This does not mean that someone has tracked you at every location. In most cases you will find devices from others in public transport or from one of your neighbors.</string>
    <string name="mark_false_alarm">FALSE ALARM</string>
    <string name="channel_name">Tracking Detection</string>
    <string name="channel_description">Warns you about a possible tracking device</string>
    <string name="statistics_beacons">Devices found</string>
    <string name="statistics_devices">Locations</string>
    <string name="statistics_alerts">Tracking Alerts sent</string>
    <string name="statistics_false_alarms">False Alarms</string>
    <string name="statistics_devices_monitored">Devices Currently Monitored</string>
    <string name="settings_share_data_summary">Support the project by sharing some anonymous data</string>
    <string name="settings_share_data_title">Participate in study</string>
    <string name="settings_advanced_mode_summary">Adds more options to AirGuard. These options are meant for advanced users.</string>
    <string name="settings_advanced_mode_title">Expert Mode</string>
    <string name="settings_deactivate_scanning_title">Deactivate background scan</string>
    <string name="settings_permanent_scanning_title">Permanent scanning</string>
    <string name="settings_permanent_scanning_summary">Use a permanent background scanner. Enabling this feature results in more accurate results, but it might affect the stability of the app. When in doubt: leave this option disabled.</string>
    <string name="device_item_first_discovery">Discovered:</string>
    <string name="beacons">Beacons</string>
    <string name="devices_swipe">Swipe to remove</string>
    <string name="devices_list_empty">Whenever the app detects an AirTag or another tracking device, they will be listed here. The list will likely contain devices that did not track you. For devices that track you, you will receive a notification.</string>
    <string name="ignored_device_list_empty">Whenever you receive a notification for being tracked by a known device (e.g. an AirTag you own), you can mark them as a false alarm. Devices which do not change their Bluetooth address (e.g. Tile, Chipolo, Pebblebee) can also be ignored. These devices will be listed here. Remember: An AirTag changes its Bluetooth address once a day, so even if you mark it as a false alarm it becomes a new entry after a day.</string>
    <string name="settings_use_location_summary">If enabled, more detailed tracking information can be provided when being tracked.</string>
    <string name="settings_use_location_title">Use Location</string>
    <string name="error_requesting_location_permission">Error requesting background Location permission</string>
    <string name="tracking_locate_at_title">Play Sound</string>
    <string name="permissions_background_location_title">Background Location</string>
    <string name="permission_background_location_message">By granting this permission, more detailed tracking information can be provided when being tracked. This is an optional feature.</string>
    <string name="ok_button">OK</string>
    <string name="tracking_feedback_title">Feedback</string>
    <string name="tracking_detail_scan_title">Locate Tracker</string>
    <string name="tracking_detail_scan_subtitle">Shows live information about this tracker</string>
    <string name="tracking_ignore_device_title">Ignore Device</string>
    <string name="tracking_ignore_device_subtitle">Mute notifications for this device</string>
    <string name="tracking_false_alarm_title">False Alarm</string>
    <string name="tracking_false_alarm_subtitle">Mark this notification as false alarm</string>
    <string name="tracking_missing_beacons_info">Some beacons were captured without any location data and are therefore not displayed.</string>
    <string name="feedback_question1">Where was the Tracker you found hidden?</string>
    <string name="feedback_location_backpack">Backpack</string>
    <string name="feedback_location_clothes">Clothes</string>
    <string name="feedback_location_car">Car</string>
    <string name="feedback_location_bike">Bike</string>
    <string name="feedback_location_other">Other</string>
    <string name="feedback_location_not_found">Tracker was not found</string>
    <string name="feedback_success">Feedback submitted successfully</string>
    <string name="feedback_close">Close</string>
    <string name="tracking_locate_at_playing_sound">Playing sound…</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_required_message">You need to give this permission in order to use this app.</string>
    <string name="rssi">RSSI</string>
    <string name="device_item_last_seen">Last seen:</string>
    <string name="dashboard_tile_change">+%d</string>
    <string name="onboarding_share_data_title">Participate in our study?</string>
    <string name="onboarding_share_data_switch">Participate in study</string>
    <string name="onboarding_share_data_description">
        This app has been developed by researchers of the Technical University of Darmstadt, Germany. With our study, we want to find out how many people are affected by malicious tracking attempts.
        Whether Apple\'s Find My devices are actually used for tracking people. And ultimately, how well we can protect people from this with our app.\n
        <b>To join you need to be 18 years or older.</b>
        \n\n

        • We will collect some information about the discovered devices like the <b>device type</b>, <b>RSSI value</b> (signal strength) and the <b>date and time</b> of the discovery \n\n
        • How many <b>notifications</b> have been sent to you, the <b>date and time</b> of the alert as well as the <b>feedback</b> which you can provide optionally\n\n

        We will <b>NOT</b> share any location data or data which might identify you! The participation is completely anonymous.</string>
    <string name="onboarding_1_description">This App will notify you when it seems like an AirTag, Find My capable device, Google "Find My Device" capable device, SmartTag, Pebblebee, Chipolo or a Tile / Life360 Tracker could be following you.</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_message">This app needs the Location permission to allow Bluetooth scanning for AirTags or other Bluetooth Trackers even when the app is closed or not in use. Additionally, you can optionally allow the app to log the location when you have been tracked.</string>
    <string name="onboarding_ignore_battery_optimization_title">Battery Optimization</string>
    <string name="onboarding_ignore_battery_optimization_description">In order to prevent the App from being stopped by Android in the background, we need to disable battery optimization.</string>
    <string name="onboarding_4_title">Background Location Permission</string>
    <string name="onboarding_4_description">To get a more detailed location history in case you\'re being tracked, allow this app to use your location all the time. This app collects location data to enable us to save the location of an AirTag or other Bluetooth Tracker even when the app is closed or not in use. This feature is optional and no location data will leave your device.</string>
    <string name="settings_use_low_power_ble_summary">This settings will use less energy, but also lead to a worse detection of trackers</string>
    <string name="settings_third_party_libraries_title">Third Party Libraries</string>
    <string name="settings_third_party_libraries_summary">Show a list of all used third party libraries and their licenses</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_privacy_policy_summary">View our short and simple privacy policy</string>
    <string name="settings_delete_study_data_title">Delete study data</string>
    <string name="location_sample_image">Location sample image</string>
    <string name="grant_location_permission">Grant Location permission</string>
    <string name="settings_app_theme_title">App Theme</string>
    <string name="settings_app_theme_summary">Choose a theme!</string>
    <string name="settings_metric_title">Metric System</string>
    <string name="settings_metric_summary">Use the metric system to display distances</string>
    <string name="settings_use_low_power_ble_title">Low Power Scan Mode</string>
    <string name="survery_settings_summary">Technical University of Darmstadt conducts a survey to find out how people are affected by stalking</string>
    <string name="survey_settings_title">Survey on stalking and location tracking</string>
    <string name="delete_data_button">Request deletion of Data</string>
    <string name="delete_data_explanation">If you would like us to delete all the data we have collected from you as part of our study, please click the button below. This will also opt you out of further participation in the study and no further data will be collected from you. If you would like to support our research again in the future, you can simply reactivate the \"Participate in study\" option or go through the onboarding dialog again and click \"Yes\" for study participation.</string>
    <string name="title_old_device_cleanup">Auto delete old devices</string>
    <string name="old_device_cleanup_description">Configure whether old devices that have not been seen for a longer time should be automatically deleted from the database.</string>
    <string name="delete_old_devices_title">Delete old devices</string>
    <string name="delete_old_devices_summary">Automatically delete devices that are not considered a potential threat and are older than the specified timeframe.</string>
    <string name="delete_unsafe_old_devices_title">Also delete unsafe old devices</string>
    <string name="delete_unsafe_old_devices_summary">Include devices that are considered a potential threat.</string>
    <string name="old_device_timeframe_label">Deletion timeframe</string>
    <string name="old_device_timeframe_hint">Select timeframe</string>
    <string name="save">Save</string>
    <string name="filter_sort_by_name">Sort by Name</string>
    <string name="filter_sort_by_last_seen">Sort by Last Seen</string>
    <string name="filter_sort_by_first_discovered">Sort by First Discovered</string>
    <string name="filter_sort_by_times_seen">Sort by Times Seen</string>
    <string name="sort_check_times_seen_description">Selected sorting order: sort by times seen</string>
    <string name="sort_check_name_description">Selected sorting order: sort by name</string>
    <string name="sort_check_last_seen_description">Selected sorting order: sort by last seen</string>
    <string name="sort_check_first_discovered_description">Selected sorting order: sort by first discovered</string>
</resources>