<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_ignored_devices"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/title_ignored_devices" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

    <item
        android:visible="@bool/debug"
        android:id="@+id/navigation_debug"
        android:icon="@drawable/ic_baseline_bug_report_24"
        android:title="@string/title_debug" />

</menu>