<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_theme_surface"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="24dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tint="@color/md_theme_onSurfaceVariant" />

    <TextView
        android:id="@+id/deletion_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/settings_delete_study_data_title"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="@color/md_theme_onSurface"
        android:gravity="center" />

    <TextView
        android:id="@+id/deletion_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="@color/md_theme_onSurfaceVariant"
        android:text="@string/delete_data_explanation"
        android:gravity="center"/>

    <Button
        android:id="@+id/delete_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/md_theme_error"
        android:textColor="@color/md_theme_onError"
        android:padding="16dp"
        android:text="@string/delete_data_button" />

</LinearLayout>